Fix visible default button border

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -348,6 +348,7 @@
             background: transparent;
             margin: 0;
             padding: 0;
+            border: none;
 
             &:focus,
             &:active {
